add load/dump interface for blockwise sparse matrix

--- a/example/Makefile
+++ b/example/Makefile
@@ -6,10 +6,10 @@ NVCC_FLAG = -O2 \
   -std=c++17
 
 TARGETS =\
-  spmm.blockwise.out spconv.blockwise.out
+  spmm.blockwise.out spconv.blockwise.out load_bsr.spmm.blockwise.out
 
 OBJS =\
-  spmm.blockwise.o spconv.blockwise.o
+  spmm.blockwise.o spconv.blockwise.o load_bsr.spmm.blockwise.o
 
 all: $(TARGETS)
 
@@ -17,6 +17,9 @@ spmm.blockwise.out: spmm.blockwise.o ../block_sparse/util/random_mask.cc.o
 	$(NVCC) $(NVCC_INC) $^ -o $@
 
 spconv.blockwise.out: spconv.blockwise.o ../block_sparse/util/random_mask.cc.o
+	$(NVCC) $(NVCC_INC) $^ -o $@
+
+load_bsr.spmm.blockwise.out: load_bsr.spmm.blockwise.o ../block_sparse/util/random_mask.cc.o
 	$(NVCC) $(NVCC_INC) $^ -o $@
 
 %.o: %.cu
